kubernetes/bootstrap/argocd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.lab.ryantaylor.tech`)
      services:
        - name: argocd-server
          port: 80
  tls: {}
